--- a/tp2/index.html
+++ b/tp2/index.html
@@ -3,8 +3,8 @@
     <title>Saisie d'une fiche "Personne"</title>
 
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="tp2.css">
-    <script type="text/javascript" src="tp2.js"></script>
+    <link rel="stylesheet" type="text/css" href="formulaire.css">
+    <script type="text/javascript" src="formulaire.js"></script>
     </head>
     <body>
 
