--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
           <a href="tp2/index.html">/TP2</a>
         </li>
         <li>
-          <a href="tp3/index.html">/TP3</a>
+          <a href="tp3-corrig/index.html">/TP3</a>
         </li>
+          
         <li>
           <a href="tp4/index.html">/TP4</a>
         </li>
